web/book/tests/examples/snapshots/examples__book__language-features__s-strings__0.snap
---
source: web/book/tests/examples/book.rs
expression: "from my_table\nselect db_version = s\"version()\"\n"
---
SELECT
  version() AS db_version
FROM
  my_table

