web/book/tests/examples/snapshots/examples__book__language-features__s-strings__1.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\naggregate {average salary}\n"
---
SELECT
  AVG(salary)
FROM
  employees

