web/book/tests/examples/snapshots/examples__book__language-features__s-strings__3.snap
---
source: web/book/tests/examples/book.rs
expression: "from s\"SELECT DISTINCT ON first_name, id, age FROM employees ORDER BY age ASC\"\njoin s = s\"SELECT * FROM salaries\" (==id)\n"
---
WITH table_4 AS (
  SELECT
    DISTINCT ON first_name,
    id,
    age
  FROM
    employees
  ORDER BY
    age ASC
),
table_5 AS (
  SELECT
    *
  FROM
    salaries
)
SELECT
  table_2.*,
  table_3.*
FROM
  table_4 AS table_2
  JOIN table_5 AS table_3 ON table_2.id = table_3.id

